--- a/raspberry/Droniada2017-phone/build.gradle
+++ b/raspberry/Droniada2017-phone/build.gradle
@@ -45,10 +45,13 @@ android {
         debug.setRoot('build/debug')
         release.setRoot('build/release')
     }
+
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.kontaktio:sdk:3.3.0'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
     compile 'com.google.android.gms:play-services:11.0.0'
 }
